Inner page human and animal page updated

--- a/buy-online.html
+++ b/buy-online.html
@@ -50,8 +50,8 @@
               </div>
               <div class="middle-menu-box">
                 <ul class="center-menulist">
-                  <li><a href="/human-health.html">HUMAN HEALTH</a></li>
-                  <li><a href="/animal-health.html">ANIMAL HEALTH</a></li>
+                  <li><a href="javascript:void(0);">HUMAN HEALTH</a></li>
+                  <li><a href="javascript:void(0);">ANIMAL HEALTH</a></li>
                   <li><a href="javascript:void(0);">BUY</a></li>
                   <li><a href="javascript:void(0);">CONTRACT RESEARCH</a></li>
                   <li><a href="javascript:void(0);">NEWS</a></li>
@@ -468,7 +468,7 @@
     <!-- content-img-section -->
     <section class="content-img-section left">
       <img
-        src="./assets/images/LandingPage/Latest_Div5.jpg"
+        src="./assets/images/LandingPage/Dic_Div4.jpg"
         class="content-img-section-img"
       />
       <div class="container container-absolute">
