Video updated in animal and human pages and feedback text changes

--- a/animal-health.html
+++ b/animal-health.html
@@ -103,7 +103,8 @@
           loop
           muted
           autoplay
-          src="https://www.w3schools.com/tags/movie.mp4"
+          poster="./assets/images/AnimalHealth_Page/AH_Banner.jpg"
+          src="./assets/images/AnimalHealth_Page/Animal_Health_1.mp4"
           playsinline
           type="video/mp4"
         ></video>
