--- a/human-health.html
+++ b/human-health.html
@@ -103,7 +103,8 @@
           loop
           muted
           autoplay
-          src="https://www.w3schools.com/tags/movie.mp4"
+          poster="./assets/images/Human_Health_Page/Human_Health_F1.jpg"
+          src="./assets/images/Human_Health_Page/Human_Health_F1.mp4"
           playsinline
           type="video/mp4"
         ></video>
@@ -119,7 +120,7 @@
             <div class="row">
               <div class="col-12">
                 <div class="title-box">
-                  <h4>Herbal products</h4>
+                  <h4>Plant Based Products</h4>
                   <h5>made for healthier life.</h5>
                   <p>
                     Our products are based on science and sound research. We
