Responsive feedback correction updated

--- a/index.html
+++ b/index.html
@@ -373,34 +373,36 @@
                   </article>
                 </div>
               </div>
-              <div class="swiper-button-next">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="26"
-                  height="51"
-                  viewBox="0 0 26 51"
-                  fill="none"
-                >
-                  <path
-                    d="M0.477783 0L25.7526 25.2749L0.477783 50.5497"
-                    fill="#FAFFE0"
-                  />
-                </svg>
-              </div>
-              <div class="swiper-button-prev">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="26"
-                  height="51"
-                  viewBox="0 0 26 51"
-                  fill="none"
-                >
-                  <path
-                    opacity=""
-                    d="M25.7526 50.5498L0.477783 25.2748L25.7526 0"
-                    fill="#FAFFE0"
-                  />
-                </svg>
+              <div class="swiper-btn-group-health-product">
+                <div class="swiper-button-next">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="26"
+                    height="51"
+                    viewBox="0 0 26 51"
+                    fill="none"
+                  >
+                    <path
+                      d="M0.477783 0L25.7526 25.2749L0.477783 50.5497"
+                      fill="#FAFFE0"
+                    />
+                  </svg>
+                </div>
+                <div class="swiper-button-prev">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="26"
+                    height="51"
+                    viewBox="0 0 26 51"
+                    fill="none"
+                  >
+                    <path
+                      opacity=""
+                      d="M25.7526 50.5498L0.477783 25.2748L25.7526 0"
+                      fill="#FAFFE0"
+                    />
+                  </svg>
+                </div>
               </div>
               <!-- <div class="swiper-pagination"></div> -->
             </div>
@@ -410,7 +412,7 @@
     </section>
 
     <!-- content-img-section -->
-    <section class="content-img-section">
+    <section class="content-img-section discover-mobile">
       <img
         src="./assets/images/LandingPage/Dic_Div4.jpg"
         class="content-img-section-img"
@@ -459,6 +461,54 @@
                   stroke-linejoin="round"
                 />
               </svg>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="content-img-section mobile-sec-box">
+      <img
+        src="./assets/images/LandingPage/Dic_Div4.jpg"
+        class="content-img-section-img"
+      />
+      <div class="container container-absolute">
+        <div class="row">
+          <div class="col-md-12 col-lg-6">
+            <div class="content-box">
+              <p>
+                We have developed a core competency for repeated and successful
+                research on various plants and plant extracts. The Bioved
+                Research Center is a platform for a spectrum of contract
+                research services meeting international standards through its
+                facility located in Pune, India
+              </p>
+              <div class="go-btn">
+                Discover More
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="88"
+                  height="29"
+                  viewBox="0 0 88 29"
+                  fill="none"
+                >
+                  <line
+                    x1="2.46533"
+                    y1="13"
+                    x2="82.5349"
+                    y2="13"
+                    stroke="#0B5940"
+                    stroke-width="3"
+                    stroke-linecap="round"
+                  />
+                  <path
+                    d="M72.7627 1.75L85.5376 14.525L72.7627 27.3"
+                    stroke="#0B5940"
+                    stroke-width="3"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </div>
             </div>
           </div>
         </div>
